devops/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urna-eletronica
  labels:
    app.kubernetes.io/name: urna-eletronica
    app.kubernetes.io/part-of: urna-eletronica
