devops/kubernetes/05-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urna-app
  namespace: urna-eletronica
  labels:
    app.kubernetes.io/name: urna-eletronica
    app.kubernetes.io/component: web-frontend-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: urna-app
  template:
    metadata:
      labels:
        app: urna-app
    spec:
      containers:
        - name: app
          image: urna-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /frontend/index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /frontend/index.html
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
