devops/kubernetes/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urna-ingress
  namespace: urna-eletronica
  labels:
    app.kubernetes.io/name: urna-eletronica
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: urna.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: urna-app-service
                port:
                  number: 80
